network/was-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: internal
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    # service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: was-server
  ports:
  - port: 4000
    targetPort: 4000
