network/web-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: web-server
